@@ -1,4 +1,12 @@
 2003-10-21  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/ext/mt_allocator.h: Change include to gthr.h.
+	* include/ext/rope: Same. Add _Refcount_base definitions.
+	* include/ext/pool_allocator.h: Adjust namespaces.
+	* include/bits/stl_threads.h (_Refcount_base): Move.
+	Put remaining into namespace __gnu_cxx.
+	
+2003-10-21  Benjamin Kosnik  <bkoz@redhat.com>
  
 	PR libstdc++/9858
 	* include/bits/locale_facets.h (ctype<char>): Remove
